<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gradient_background"
    android:padding="24dp">

    <TextView
        android:id="@+id/text_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="24sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/text_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp" />

    <ImageView
        android:id="@+id/image_weather"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/weather_icon"
        android:layout_marginTop="8dp" />
</LinearLayout>
